----------
v4.3.0-git
----------


----------
v4.2.1
----------

[mjr] Fix detecting task completion when sending task change notifications (Bug
      #13350, Alfonso Marín Marín <almarin@um.es>).

------
v4.2.0
------

[mjr] Fix returning to previously selected tab after task is saved (Bug
      #13308).
[mjr] Fix fatal error when saving a task, only one tasklist exists, and at
      least one SmartList exists.


-----------
v4.2.0beta2
-----------

[jan] Always display system task lists to administrators.
[mjr] Group task fields into tabs on edit form (Request #13228).


-----------
v4.2.0beta1
-----------

[jan] Only use URL rewriting for saving/completing tasks if pretty URLs are
      enabled in the configuration.
[jan] Don't include smart lists in top menu.
[jan] Fix top menu URLs to create new tasks in specific task lists.


------------
v4.2.0alpha1
------------

[jan] Show external tasks in the correct task type.
[jan] Purge old tasks from versions < 2.3 too.
[jan] Allow to synchronize shared task lists via CalDAV (Request #12380).
[jan] Add script to import tasks from Open-Xchange.
[jan] Add recurrence controls to basic view (Request #11545).
[mjr] Add button for creating sub-task from task view (Request #12309).
[mjr] Add ability to return to existing search results after navigating to a
      task (Request #12879).
[jan] Make shares table compatible with Oracle.
[mjr] Add API support for multiple tasklists via ActiveSync.


------
v4.1.5
------

[jan] Fix link to task in alarm emails.
[jan] Update Korean translation (Deokgon Kim <dgkim@dgkim.net>).


------
v4.1.4
------

[jan] Update Danish translation (Erling Preben Hansen <erling@eph.dk>).
[jan] Don't return future tasks from cost objects API.


------
v4.1.3
------

[jan] SECURITY: Fix XSS vulnerabilities when deleting task lists.
[jan] Fix updating alarm if completing a task recurrence.
[jan] Fix editing tasks via CalDAV (Bug #12745).


------
v4.1.2
------
