@@ -7,6 +7,7 @@ v4.3.0-git
 v4.2.1
 ----------
 
+[mjr] Add missing API support for searchTags API (Bug #13364).
 [mjr] Fix detecting task completion when sending task change notifications (Bug
       #13350, Alfonso Marín Marín <almarin@um.es>).
 
